--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid Swag has reached its enthalpy of vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" style="font-family: 'Comic Sans', Comic Sans MS, cursive; color: grey;">Request an app icon</a></center>
 		<br/>
 		<center>
-			<a id='smaller' href='http://reddit.com'>Want to beta test?</a> | <a 				href="http://reddit.com" id="smaller">Leave a review</a>
+			<a id='smaller' href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron" id="smaller">Leave a review</a>
 		</center>
 	</p>
 </body>
