--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			$(".eq-c").fadeIn(3000);
 			$("#content").fadeIn(3000);
 			$("#smaller").fadeIn(3000);
+			$("#slow").fadeIn(3000);
 		});
 		</script>
 </head>
