--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		font-family: 'Comic Sans', Comic Sans MS, cursive;
 		font-size: 10px;
 		color: grey;
+		display: none;
 	}
 	
 	
@@ -41,7 +42,7 @@
 			<h1>Swag is reaching its ∆H<sub><i>vap</i></sub></h1>
 		</center>
 	</div>
-	<div id="content" style="background-color:black;">
+	<div id="content" style="background-color:black;display:none">
 	<center><iframe id="ytplayer" type="text/html" width="640" height="390"
   	src="http://www.youtube.com/embed/YVkUvmDQ3HY?autoplay=1&controls=0&showinfo=0"
   	frameborder="0"></iframe></center>
@@ -54,7 +55,7 @@
 			</center>
 		</div>
 		<br/>
-		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid Swag has reached its enthalpy of vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" style="font-family: 'Comic Sans', Comic Sans MS, cursive; color: grey;" id="slow">Request an app icon</a></center>
+		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid Swag has reached its enthalpy of vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" style="font-family: 'Comic Sans', Comic Sans MS, cursive; color: grey;dislpay:none;" id="slow">Request an app icon</a></center>
 		<br/>
 		<center>
 			<a id='smaller' href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron" id="smaller">Leave a review</a>
