--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			$("#content").fadeIn(3000);
 			$("#smaller").fadeIn(3000);
 			$("#slow").fadeIn(3000);
+			$("#smaller2").fadeIn(3000);
 		});
 		</script>
 </head>
@@ -28,6 +29,13 @@
 	}
 	
 	#smaller {
+		font-family: 'Comic Sans', Comic Sans MS, cursive;
+		font-size: 10px;
+		color: grey;
+		display: none;
+	}
+	
+	#smaller2 {
 		font-family: 'Comic Sans', Comic Sans MS, cursive;
 		font-size: 10px;
 		color: grey;
@@ -58,7 +66,7 @@
 		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid Swag has reached its enthalpy of vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" style="font-family: 'Comic Sans', Comic Sans MS, cursive; color: grey;dislpay:none;" id="slow">Request an app icon</a></center>
 		<br/>
 		<center>
-			<a id='smaller' href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron" id="smaller">Leave a review</a>
+			<a id='smaller' href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron" id="smaller2">Leave a review</a>
 		</center>
 	</p>
 </body>
