--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</div>
 	<div id="content" style="background-color:black;display:none">
 	<center><iframe id="ytplayer" type="text/html" width="640" height="390"
-  	src="http://www.youtube.com/embed/YVkUvmDQ3HY?autoplay=1&controls=0&showinfo=0"
+  	src="http://www.youtube.com/embed/YVkUvmDQ3HY?autoplay=1&controls=0&showinfo=0&start=33"
   	frameborder="0"></iframe></center>
 	</div>
   	<br/>
