--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	#slow {
 		 font-family: 'Comic Sans', Comic Sans MS, cursive;
 		 color: grey;
-		 dislpay:none;
+		 display: none;
 	}
 </style>
 <body>
@@ -72,7 +72,7 @@
 	</h2>
 	<p id="smaller">
 	<center>
-		<a href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron">Leave a review</a>
+		<a id="smaller" href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a id="smaller" href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron">Leave a review</a>
 	</center>
 	</p>
 </body>
