--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
 	<h2>
 		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid Swag has reached its enthalpy of vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon</a></center>
 	</h2>
+	<div id="smaller">
 	<p>
 	<center>
-		<a id="smaller" href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a id="smaller2" href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron">Leave a review</a>
+		<a href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron">Leave a review</a>
 	</center>
 	</p>
+	</div>
 </body>
 </html>
