--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 		 color: grey;
 		 display: none;
 	}
+	
+	#grey {
+		color: grey;
+	}
 </style>
 <body>
 	<div class="title" style="display:none;">
@@ -73,7 +77,7 @@
 	<div id="smaller">
 	<p>
 	<center>
-		<a href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron">Leave a review</a>
+		<a id="grey" href='mailto:boilingliquidswag@gmail.com?subject=Beta%20Testing&body=I%20should%20be%20a%20beta%20tester%20because:%20.%20My%20reddit%20username%20is:%20.'>Want to beta test?</a> | <a href="http://www.reddit.com/message/compose/?to=James-Isaac-Neutron">Leave a review</a>
 	</center>
 	</p>
 	</div>
