--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Swag is reaching its enthalpy of vaporization</title>
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 	<script src="http://code.jquery.com/jquery-latest.min.js">
 	</script>
 	<script>
