--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			$("#smaller").fadeIn(3000);
 			$("#slow").fadeIn(3000);
 			$("#smaller2").fadeIn(3000);
+			$("#screenshot").fadeIn(3000);
 		});
 		</script>
 </head>
@@ -59,6 +60,9 @@
 			<h1>Swag is reaching its ∆H<sub><i>vap</i></sub></h1>
 		</center>
 	</div>
+	
+	<img id="screenshot" src='screenshot.png'>
+	
 	<div id="content" style="background-color:black;display:none">
 	<center><iframe id="ytplayer" type="text/html" width="640" height="390"
   	src="http://www.youtube.com/embed/YVkUvmDQ3HY?autoplay=1&controls=0&showinfo=0&start=33"
