--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
 		</center>
 	</div>
 	
-	<img id="screenshot" src='screenshot.png'>
-	
 	<div id="content" style="background-color:black;display:none">
 	<center><iframe id="ytplayer" type="text/html" width="640" height="390"
   	src="http://www.youtube.com/embed/YVkUvmDQ3HY?autoplay=1&controls=0&showinfo=0&start=33"
   	frameborder="0"></iframe></center>
 	</div>
+	
+	<center><img id="screenshot" src='screenshot.png'></center>
+	
   	<br/>
 	<p>
 		<div class="eq-c" style="display:none;">
