--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 	#grey {
 		color: grey;
 	}
+	
+	#screenshot {
+		display: none;
+	}
+	
 </style>
 <body>
 	<div class="title" style="display:none;">
@@ -66,7 +71,7 @@
   	src="http://www.youtube.com/embed/YVkUvmDQ3HY?autoplay=1&controls=0&showinfo=0&start=33"
   	frameborder="0"></iframe></center>
 	</div>
-	
+	<br/>
 	<center><img id="screenshot" src='screenshot.png'></center>
 	
   	<br/>
