--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		</div>
 	</p>
 	<h2>
-		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid Swag has reached its enthalpy of vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon</a></center>
+		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid Swag has reached its enthalpy of vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon (<i>any</i> non-stock icon)</a></center>
 	</h2>
 	<div id="smaller">
 	<p>
