--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   	frameborder="0"></iframe></center>
 	</div>
 	<br/>
-	<center><img id="screenshot" src='screenshot.png'></center>
+	<center><img id="screenshot" src='screenshot1.png'></center>
 	
   	<br/>
 	<p>
