--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			$("#slow").fadeIn(3000);
 			$("#smaller2").fadeIn(3000);
 			$("#screenshot").fadeIn(3000);
+			$("#quote").fadeIn(3000);
 		});
 		</script>
 </head>
@@ -58,6 +59,10 @@
 		display: none;
 	}
 	
+	#quote {
+		display: none;
+		color: grey;
+	}
 </style>
 <body>
 	<div class="title" style="display:none;">
@@ -81,9 +86,11 @@
 			Sw<sub><i>(l)</i></sub> + 42,069 kJ &#8644; Dp<sub><i>(g)</i></sub>
 			</center>
 		</div>
+		<center id="quote">"My retarded brother loves it!"</center>
+		<center id="smaller">–Codyd51</center>
 	</p>
 	<h2>
-		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid Swag has reached its enthalpy of vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon (<i>any</i> non-stock icon)</a></center>
+		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid%20Swag%20has%20reached%20its%20enthalpy%20of%20vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon (<i>any</i> non-stock icon)</a></center>
 	</h2>
 	<div id="smaller">
 	<p>
