--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 			Sw<sub><i>(l)</i></sub> + 42,069 kJ &#8644; Dp<sub><i>(g)</i></sub>
 			</center>
 		</div>
-		<center id="quote">"My retarded brother loves it!"</center>
-		<center id="smaller">–Codyd51</center>
+		<div id="quote"><center>"My retarded brother loves it!"</center></div>
+		<div id="smaller"><center>–Codyd51</center></div>
 	</p>
 	<h2>
 		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid%20Swag%20has%20reached%20its%20enthalpy%20of%20vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon (<i>any</i> non-stock icon)</a></center>
