--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 		</div>
 		<div id="quote"><center>"My retarded brother loves it!"</center></div>
 		<div id="smaller"><center>–Codyd51</center></div>
+		<div id="quote"><center>"I do like that it reminds me of spodermen."</center></div>
+		<div id="smaller"><center>–Ryan Petrich</center></div>
 	</p>
 	<h2>
 		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid%20Swag%20has%20reached%20its%20enthalpy%20of%20vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon (<i>any</i> non-stock icon)</a></center>
