--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			$("#smaller2").fadeIn(3000);
 			$("#screenshot").fadeIn(3000);
 			$("#quote").fadeIn(3000);
+			$("#smaller3").fadeIn(3000);
 		});
 		</script>
 </head>
@@ -64,6 +65,14 @@
 		color: grey;
 		font-family: 'Comic Sans', Comic Sans MS, cursive;
 	}
+	
+	#smaller3 {
+		font-family: 'Comic Sans', Comic Sans MS, cursive;
+		font-size: 10px;
+		color: grey;
+		display: none;
+	}
+	
 </style>
 <body>
 	<div class="title" style="display:none;">
@@ -90,7 +99,7 @@
 		<div id="quote"><center>"My retarded brother loves it!"</center>
 		<div id="smaller"><center>–Codyd51</center></div>
 		<center>"I do like that it reminds me of spodermen."</center>
-		<div id="smaller"><center>–Ryan Petrich</center></div>
+		<div id="smaller3"><center>–Ryan Petrich</center></div>
 		</div>
 	</p>
 	<h2>
