--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div id="content" style="background-color:black;display:none">
 	<center><iframe id="ytplayer" type="text/html" width="640" height="390"
   	src="http://www.youtube.com/embed/YVkUvmDQ3HY?autoplay=1&controls=0&showinfo=0&start=33"
-  	frameborder="0"></iframe></center>
+  	frameborder="0">Loading...</iframe></center>
 	</div>
 	<br/>
 	<center><img id="screenshot" src='screenshot1.png'></center>
@@ -106,8 +106,8 @@
 		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid%20Swag%20has%20reached%20its%20enthalpy%20of%20vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon (<i>any</i> non-stock icon)</a></center>
 	</h2>
 	
-	<center><iframe src="https://docs.google.com/forms/d/1ZI1-b3GgafhxLP_AxEcU5M2RJjKR3LTE4ur5aGLf3dY/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0"></iframe></center>
-	
+	<center><iframe src="https://docs.google.com/forms/d/1ZI1-b3GgafhxLP_AxEcU5M2RJjKR3LTE4ur5aGLf3dY/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
+	<br/>
 	<div id="smaller">
 	<p>
 	<center>
