--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			$("#screenshot").fadeIn(3000);
 			$("#quote").fadeIn(3000);
 			$("#smaller3").fadeIn(3000);
+			$("#survey").fadeIn(3000);
 		});
 		</script>
 </head>
@@ -106,7 +107,10 @@
 		<center><a href="mailto:boilingliquidswag@gmail.com?subject=Liquid%20Swag%20has%20reached%20its%20enthalpy%20of%20vaporization&body=I%20will%20attach%20an%20IconThief%20bundle%20like%a%20good%person" id="slow">Request an app icon (<i>any</i> non-stock icon)</a></center>
 	</h2>
 	
+	<div id="survey" style="display:none;">
 	<center><iframe src="https://docs.google.com/forms/d/1ZI1-b3GgafhxLP_AxEcU5M2RJjKR3LTE4ur5aGLf3dY/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
+	</div>
+	
 	<br/>
 	<div id="smaller">
 	<p>
