--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 	<div class="title" style="display:none;">
 		<center>
 			<h1>Swag is reaching its ∆H<sub><i>vap</i></sub></h1>
+			<h3>What the hell, guys? I haven't received <i>one</i> icon request?</h3>
 		</center>
 	</div>
 	
