--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 		font-family: 'Comic Sans', Comic Sans MS, cursive;
 	}
 	
+	h3 {
+		font-family: 'Comic Sans', Comic Sans MS, cursive;
+		color: grey;
+	}
+	
 	p {
 		font-family: 'Comic Sans', Comic Sans MS, cursive;
 	}
